--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }} - Microblog</title>
-</head>
-<body>
-    <h1>Hello, {{user.username}}</h1>
+{% extends "base.html" %}
+{% block content %}
+    <h1>Hello, {{user.username}}!</h1>
     {% for post in posts %}
     <div>
         <p>
@@ -15,5 +8,4 @@
         </p>
     </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
